--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,7 @@
                     <div class="lightbox-metadata">
                         <h3 class="image-title" id="lightbox-title"></h3>
                         <p class="image-author" id="lightbox-author"></p>
+                        <div class="lightbox-caption" id="lightbox-caption"></div>
                     </div>
                     <button class="like-btn" id="lightbox-like">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
