Fix Reset Password functionality.

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <!-- NAVIGATION -->
     <nav class="nav" id="nav">
         <div class="nav-content">
-            <h1 class="logo" data-text="TROUGH" onclick="window.location.href='/'">TROUGH</h1>
+            <h1 class="logo" data-text="" onclick="window.location.href='/'"></h1>
             <button class="nav-btn" id="auth-btn" aria-label="Auth"></button>
         </div>
     </nav>
