--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,7 @@
                         <button type="button" class="password-toggle" data-for="login-password">Show password</button>
                     </div>
                     <div class="form-group" id="register-form" style="display: none;">
-                        <input type="text" id="register-username" placeholder="Username">
+                        <input type="text" id="register-username" placeholder="Username" minlength="3" maxlength="30" pattern="[a-z0-9]+" title="3–30 lowercase letters or numbers">
                         <input type="email" id="register-email" placeholder="Email address">
                         <input type="password" id="register-password" placeholder="Password">
                         <div id="password-strength" aria-live="polite" title="Password strength">
