--- a/static/index.html
+++ b/static/index.html
@@ -44,11 +44,9 @@
                         <p class="image-author" id="lightbox-author"></p>
                         <div class="lightbox-caption" id="lightbox-caption"></div>
                     </div>
-                    <button class="like-btn" id="lightbox-like">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="m12 21-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.18L12 21z"/>
-                        </svg>
-                    </button>
+                    <div style="display:flex;gap:8px;align-items:center">
+                      <button class="like-btn" id="lightbox-collect" title="Collect">✧</button>
+                    </div>
                 </div>
             </div>
         </div>
