--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>TROUGH · AI IMAGERY</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/style.css?v=v3">
@@ -87,6 +87,7 @@
                         <input type="password" id="register-password-confirm" placeholder="Confirm password">
                         <button type="button" class="password-toggle" data-for="register-password">Show password</button>
                         <button type="button" class="password-toggle" data-for="register-password-confirm">Show confirm password</button>
+                        <label class="auth-legal"><input type="checkbox" id="register-tos"> I agree to the <a href="/terms" target="_blank" rel="noopener">ToS</a> and <a href="/privacy" target="_blank" rel="noopener">Privacy</a></label>
                     </div>
                     <button type="submit" class="auth-submit" id="auth-submit">Sign In</button>
                     <div class="auth-error" id="auth-error"></div>
