Fix: Invitation code logic and password policy improvements

--- a/static/index.html
+++ b/static/index.html
@@ -84,6 +84,7 @@
                           <div class="pw-seg"><div class="fill"></div></div>
                           <div class="pw-seg"><div class="fill"></div></div>
                         </div>
+                        <div id="password-requirements" class="password-requirements"></div>
                         <input type="password" id="register-password-confirm" placeholder="Confirm password">
                         <button type="button" class="password-toggle" data-for="register-password">Show password</button>
                         <button type="button" class="password-toggle" data-for="register-password-confirm">Show confirm password</button>
